# dme-sync

./: .DME-SYNC_DEV_RULES.md  .env  .env.template  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CLOUD_ONLY_DEVELOPMENT.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEPENDENCY_CHANGES.md  Dockerfile  PROJECT_BRIEF.md  PROJECT_LIVING_HISTORY_AND_GUIDE.md  README-vapi.md  README.md  analyze_data.py  dme.db  dme_sync.py  docker-compose.yml  embed_upsert.py  main.py  postgres_enrichment_sample.csv  pyproject.toml  requirements.txt  run_tests.sh  test_vapi_contract.py  test_vapi_fixture.json  test_vapi_search.py  vapi-assistant-full-config.json  vapi-tool-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-kb.yml  daily-sync.yml  doc-check.yml
docs/: CLOUD_ONLY_DEVELOPMENT.md  HANDOFF_BRIEF_2025-05-20.md  ONBOARDING_PROMPT_FOR_AI.md  PROJECT_LIVING_HISTORY_AND_GUIDE.md  RAG-Ready Knowledge-Base Pipeline (v1.1)  README.md  oncall.md  schema_v1.md
indexer/: chunk_embed_index.py  kb_update.py  pinecone_doc_check.py  pinecone_utils.py  relationship_graph.py  s3_cleanup_govuk.py  s3_docid_extract.py  s3_inspect.py  s3_raw_summary.py
legacy_build/: VAPI-DEPLOYMENT-CHECKLIST.md  rate_limit.py  vapi_update.py
processor/: normalize_and_canonicalize.py
rag_api/: llm_rag_demo.py  main.py
scraper/: __init__.py  check_wp_api_completeness.py  test_scraper.py
scripts/: check_doc_update.sh
src/rag_api/: main.py
tests/: test_chunk_embed_index.py  test_normalize_and_canonicalize.py  test_pinecone_needle.py  test_relationship_graph.py  test_vapi_adapter.py
(+18 files in other folders)
